correction de certain contraste

--- a/style.css
+++ b/style.css
@@ -348,14 +348,14 @@ li:nth-child(3){
 }
 
 
-a {
+.footer a {
     
     text-decoration: none;
     color: #ffffff;
 
 }
 
-a:hover{
+.footer a:hover{
     color: #70b3b1;
 }
 
